# verus-vulkan

./: Cargo.toml  LICENSE  README.md
docs/: caldera-design.md  triangle-postmortem.md
src/: acceleration_structure.rs  allocator.rs  allocator_proofs.rs  animation.rs  asset_pipeline.rs  bindless.rs  buffer_address.rs  color_blend.rs  command.rs  command_pool.rs  completion.rs  composition_proofs.rs  compute_validation.rs  conditional_rendering.rs  cooperative_matrix.rs  depth_clamp_control.rs  depth_stencil.rs  descriptor.rs  descriptor_buffer.rs  descriptor_update.rs  descriptor_validation.rs  device.rs  device_generated_commands.rs  draw_state.rs  dynamic_rendering.rs  dynamic_rendering_local_read.rs  end_to_end.rs  end_to_end_workflows.rs  event.rs  extended_dynamic_state.rs  external_memory.rs  fence.rs  ffi.rs  flags.rs  format_properties.rs  fragment_shading_rate.rs  frame.rs  frame_lifecycle.rs  framebuffer.rs  gemm_dispatch.rs  (+85 more)
src/examples/: mod.rs  nested_command_buffer_lifecycle.rs  ray_traced_sphere.rs  render_triangle.rs  shading_rate_setup.rs
src/runtime/: acceleration_structure.rs  animation.rs  bindless.rs  command_buffer.rs  command_pool.rs  completion.rs  conditional_rendering.rs  descriptor.rs  device.rs  draw_state.rs  event.rs  fence.rs  frame_loop.rs  framebuffer.rs  image.rs  image_layout.rs  mapped_buffer.rs  memory.rs  memory_aliasing.rs  memory_map.rs  mod.rs  pipeline.rs  query_pool.rs  queue.rs  queue_ownership.rs  ray_tracing_pipeline.rs  readback.rs  recording_context.rs  render_graph.rs  render_graph_executor.rs  render_pass.rs  resource_lifecycle.rs  ring_buffer.rs  sampler.rs  semaphore.rs  shader_module.rs  surface.rs  swapchain.rs  timeline_semaphore.rs  validated_descriptor.rs
