[package]
name = "verus-vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = { path = "../verus/source/vstd" }
builtin = { package = "verus_builtin", path = "../verus/source/builtin" }
ash = { version = "0.38", default-features = true }

# Windowing (shared by both backends)
winit = { version = "0.30", optional = true }

# Vulkan backend
ash-window = { version = "0.13", optional = true }
raw-window-handle = { version = "0.6", optional = true }

# WebGPU backend
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }

[features]
windowing = ["winit"]
vulkan-backend = ["windowing", "ash-window", "raw-window-handle"]
webgpu-backend = ["windowing", "wgpu", "pollster"]

[[bin]]
name = "triangle"
path = "src/bin/triangle.rs"
required-features = ["windowing"]

[package.metadata.verus]
verify = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }
